--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This details of this data set are described in ""Aben, B., Buc Calderon, C. Van den Bussche, E., Verguts, T. (2020). Cognitive Effort Modulates Connectivity between Dorsal Anterior Cingulate Cortex and Task-Relevant Cortical Areas. Journal of Neuroscience."
+This details of this data set are described in ""Aben, B., Buc Calderon, C. Van den Bussche, E., Verguts, T. (2020). Cognitive Effort Modulates Connectivity between Dorsal Anterior Cingulate Cortex and Task-Relevant Cortical Areas. Journal of Neuroscience, 40(19), 3838-3848."
 
 The data set contains data of 30 subjects. For each subjects, the following data is included:
 * T1 weighted anatomical scans
