--- a/README
+++ b/README
@@ -3,8 +3,8 @@ This details of this data set are described in ""Aben, B., Buc Calderon, C. Van 
 The data set contains data of 30 subjects. For each subjects, the following data is included:
 * T1 weighted anatomical scans
 * Bold data obtained with a (functional localizer) 1-back task
-* Task event file for the 1-back task
+* Task event file for 1-back task
 * Bold data obtained with an effort task where subjects had to detect low- and high-noise images of faces or houses
-* Task event file for the effort task
+* Task event file for effort task
 * Fieldmaps (magnitude1, magnitude2, phase difference)
 
